# DolRecomp

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.md  README.md
.github/workflows/: cmake-single-platform.yml
src/: main.c
src/analysis/: code_section.h  embedded_data.c  embedded_data.h  smc.c  smc.h  symbol_map.c  symbol_map.h
src/app/: cli.c  cli.h  database.c  database.h  main.c  paths.c  paths.h  pipeline.c  pipeline.h  setup.c  setup.h
src/backend/: codegen.c  codegen.h  dispatch.c  dispatch.h  emitter.c  emitter.h  symbols.c  symbols.h
src/core/: cpu.c  cpu.h  types.h
src/cpu/: cpu.c  cpu.h
src/frontend/: decoder.c  decoder.h  disc_extract.c  dol.c  dol.h  rel.c  rpx.c
src/frontend/container/: disc_extract.c  dol.h  rel.h  rpx.h
src/platform/: fs.c  fs.h  pathlist.c  pathlist.h  process.c  process.h  strutil.c  strutil.h
src/runtime/: runtime.c  runtime.h
tests/: cross_check.s  test_codegen_emit.c  test_cross_check.c  test_disc_extract.c  test_dispatch.c  test_dol.c  test_jumptables.c  test_opcodes.c  test_pc_reference.c  test_rel.c  test_rpx.c  test_symbols.c
tests/cmake/: codegen_compile.cmake
tests/diff/: dedicated_cases.h  dedicated_run.c  gen.c  probe.h  probes.inc  run.c
tests/dolphin/: Makefile
tests/dolphin/source/: main.c
tests/fixtures/: codewarrior.map
tests/oracle/: dedicated_diff  dedicated_gen  dedicated_generated.c  host_diff  host_diff_gen  host_generated.c
